--- a/css/windows_guide.css
+++ b/css/windows_guide.css
@@ -226,6 +226,11 @@
 				display: block;
 			}	
 		}
+		@media screen and (max-width:700px){
+			.containter p{
+				margin: 0 30px;
+			}
+		}
 		@media screen and (max-width:619px){
 			.containter{
 				width: 100%;
