--- a/css/main-page.css
+++ b/css/main-page.css
@@ -20,16 +20,12 @@
 			max-height: 20%;
 			position: absolute;
 		}
-		.bkgi{
-			background-repeat: no-repeat;
-			background: rgba(0,0,0,0.2);
-			background-size: 100%;
-			height: 949px;
-			position: static;
-			top: 0;
+		#autoplay{
 			width: 100%;
-			z-index: -1;
- 		}
+			height: 100%;
+			min-height: 660px;
+			object-fit: fill;
+		}
 		.topRight{
 			background-color: #333;
 			height: 60px;
