--- a/css/main-page.css
+++ b/css/main-page.css
@@ -20,11 +20,12 @@
 			max-height: 20%;
 			position: absolute;
 		}
+		.bkgi{
+			display: none;
+		}
 		#autoplay{
 			width: 100%;
 			height: 100%;
-			min-height: 660px;
-			object-fit: fill;
 		}
 		.topRight{
 			background-color: #333;
@@ -437,6 +438,20 @@
 			}
 		}
 		@media screen and (max-width:1218px){
+			#autoplay{
+				display: none;
+			}
+			.bkgi{
+				display: block;
+				background-repeat: no-repeat;
+				background: rgba(0,0,0,0.2);
+				background-size: 100%;
+				height: 949px;
+				position: static;
+				top: 0;
+				width: 100%;
+				z-index: -1;
+			}
 			.top2Left{
 				padding: 0;
 				margin-left: 80px;
