--- a/css/main-page-en.css
+++ b/css/main-page-en.css
@@ -20,15 +20,12 @@
 			max-height: 20%;
 			position: absolute;
 		}
-		.bkgi{
-			background-repeat: no-repeat;
-			background: rgba(0,0,0,0.2);
-			background-size: 100%;
-			height: 949px;
-			position: static;
-			top: 0;
+		#autoplay{
 			width: 100%;
-			z-index: -1;
+			height: 100%;
+		}
+		.bkgi{
+			display: none;
  		}
 		.topRight{
 			background-color: #333;
@@ -470,6 +467,20 @@
 			}
 		}
 		@media screen and (max-width:1172px){
+			#autoplay{
+				display: none;
+			}
+			.bkgi{
+				background-repeat: no-repeat;
+				background: rgba(0,0,0,0.2);
+				background-size: 100%;
+				display: block;
+				height: 949px;
+				position: static;
+				top: 0;
+				width: 100%;
+				z-index: -1;
+			}
 			.small_wrap{
 				position: relative;
 				left: 200px;
