更新了加载动画，并且应用到所有页面

--- a/css/main-page.css
+++ b/css/main-page.css
@@ -2,7 +2,11 @@
         	font-family: 'PingFang SC Light';
         	src: url(../font/pingfangxiti.ttf);
       	}
+		html{
+			height: 100%;
+		}
 		body{
+			height: 100%;
 			margin: 0;
 			padding: 0;
 		}
