--- a/css/faq.css
+++ b/css/faq.css
@@ -107,6 +107,24 @@
 			margin-right: 30px;
 			width: 150px;
 		}
+        .one i{
+            transition-duration: 1s;
+            -webkit-transition-duration: 1s;
+            -moz-transition-duration: 1s;
+            -o-transition-duration: 1s;
+        }
+        .one i:hover{
+            color: #333 !important;
+        }
+        .two i{
+            transition-duration: 1s;
+            -webkit-transition-duration: 1s;
+            -moz-transition-duration: 1s;
+            -o-transition-duration: 1s;
+        }
+		.two i:hover{
+            color: #333 !important;
+        }
 		.fa-mobile-phone{
 			color: #888;
 			padding: 20px 60px;
@@ -157,10 +175,15 @@
 			width: 100%;
 			z-index: 99;
 		}
+        #smoke{
+            height: 100%;
+            width: 100%;
+            background-color: rgba(0, 0, 0, 0.3);
+        }
 		.mr{
-			background: cover;
-			background: rgba(0,0,0,0.3);
-			bottom: 0px;
+
+            background: rgba(0, 0, 0, 0.1) url(../img/bookf.jpg);
+			bottom: 0;
 			height: 260px;
 			position: absolute;
 			width: 100%;
