修改了所有head标签内文件头的信息，减少了代码冗余，修复了登录注册页面底部空白的问题，script标签放在了body最底部，修复了其他语言下主页图片不显示的问题

--- a/css/sign in-page.css
+++ b/css/sign in-page.css
@@ -4,7 +4,7 @@
       	}
 		body{
 			margin: 0;
-			height: 930px;
+			height: auto;
 			padding: 0;
 		}
 /*------------------------------top glass------------------------------*/
