--- a/css/main-page.css
+++ b/css/main-page.css
@@ -30,6 +30,8 @@
 		#autoplay{
 			width: 100%;
 			height: 100%;
+			min-height: 660px;
+			object-fit: fill;
 		}
 		.topRight{
 			background-color: #333;
