--- a/css/signup-page.css
+++ b/css/signup-page.css
@@ -5,7 +5,7 @@
 		body{
 			margin: 0;
 			padding: 0;
-			height: 930px;
+			height: auto;
 		}
 /*------------------------------top glass------------------------------*/
 		.glass{
